--- a/Gameboard.html
+++ b/Gameboard.html
@@ -12,6 +12,6 @@
 </head>
 <body>
     <canvas id="gameCanvas"></canvas>
-    <script src="game.js"></script>
+    <script type="module" src="game.js"></script>
 </body>
 </html>
